# arclio-mcp-tooling

./: .env.sops  .gitignore  .sops.yaml  LICENSE  Makefile  README.md  chart_and_sharing_integration.md  docker-compose.weaviate.yml  env.example  pyproject.toml  ruff.toml  test_batch_slides.py  test_overflow_fix.py
notebooks/: mdd_data_transformation.ipynb  mdd_explanatory_pipeline_walkthrough.ipynb
tests/: conftest.py  unit_conversion_test.py
tests/arclio-mcp-gsuite/integration/: test_calendar_api.py  test_drive_api.py  test_gmail_api.py  test_slides_api.py
tests/arclio-mcp-gsuite/mocks/: drive_responses.py
tests/arclio-mcp-gsuite/unit/prompts/: test_calendar_prompts.py  test_drive_prompts.py  test_gmail_prompts.py  test_slides_prompts.py
tests/arclio-mcp-gsuite/unit/resources/calendar/: test_list_resource.py
tests/arclio-mcp-gsuite/unit/resources/drive/: test_get_recent_files_resource.py
tests/arclio-mcp-gsuite/unit/resources/gmail/: test_get_gmail_labels_resource.py
tests/arclio-mcp-gsuite/unit/services/calendar/: test_create_event.py  test_delete_event.py  test_get_events.py  test_list_calendars.py  (+1 more)
tests/arclio_mcp_gsuite/integration/: test_drive_api.py  test_gmail_api.py  test_slides_api.py
tests/arclio_mcp_gsuite/mocks/: drive_responses.py
tests/arclio_mcp_gsuite/unit/prompts/: test_calendar_prompts.py  test_gmail_prompts.py
tests/aws-s3-mcp/: conftest.py
tests/aws-s3-mcp/integration/: test_mcp_tools_integration.py
tests/aws-s3-mcp/unit/services/: test_s3_service.py
tests/aws-s3-mcp/unit/tools/: test_s3_list_objects_paginated.py  test_s3_tools.py
tests/google-workspace-mcp/integration/: test_calendar_api.py  test_docs_api.py  test_drive_api.py  test_gmail_api.py  test_sheets_api.py  test_slides_api.py
tests/google-workspace-mcp/manual/: test_batch_slides.py  test_with_presentation.py
tests/google-workspace-mcp/manual_tests/private-image-distortion/: TEST_README.md  test_image_distortion.py  test_private_image_with_presentation.py  test_slides_local.py
tests/google-workspace-mcp/unit/: test_config.py
tests/google-workspace-mcp/unit/prompts/: test_calendar_prompts.py  test_drive_prompts.py  test_gmail_prompts.py  test_slides_prompts.py
tests/markdowndeck/: conftest.py
tests/markdowndeck/behaviour/overflow/: test_overflow_edge_cases.py
tests/markdowndeck/end_to_end/: test_cli.py  test_e2e.py
tests/markdowndeck/functional/: test_cli.py
tests/markdowndeck/integration/: test_end_to_end.py  test_golden_case.py  test_golden_case_1111_media.py  test_integration.py  test_layout_calculator.py  test_layout_columns.py  test_metrics_integration.py  test_overflow.py  test_overflow_handler.py  test_overflow_stress_conditions.py  test_parser_integration.py  test_pipeline_contracts.py  test_pipeline_integration.py  test_position_data_integrity.py  test_showcase_markdown.py
tests/markdowndeck/integration/api/: test_api_client_integration.py
tests/markdowndeck/integration/layout/: test_layout_calculator.py  test_metrics_integration.py
tests/markdowndeck/integration/overflow/: test_comprehensive_integration.py  test_overflow_handler.py
tests/markdowndeck/integration/parser/: test_parser_integration.py
tests/markdowndeck/stress/: test_layout_stress.py  test_overflow_stress.py  test_parser_stress.py
tests/markdowndeck/stress/layout/: test_layout_stress.py
tests/markdowndeck/stress/overflow/: test_overflow_stress.py  test_overflow_stress_conditions.py
tests/markdowndeck/stress/parser/: test_parser_stress.py
tests/markdowndeck/unit/: test_content_parser.py  test_directive_parser.py  test_known_limitations.py  test_layout_processor.py  test_section_parser.py
tests/markdowndeck/unit/api/: test_api_generator.py  test_api_generator_autofit.py  test_api_generator_bugs.py  test_api_generator_bugs_2.py  test_api_generator_placeholders.py  test_api_generator_request_order.py  test_auth.py  test_list_builder_nesting.py
tests/markdowndeck/unit/layout/: test_font_metrics.py  test_layout.py  test_layout_bugs.py  test_layout_manager.py  test_overflow.py  test_targeted_layout_behavior.py  test_text_height_improvement.py
tests/markdowndeck/unit/models/: test_code_element.py  test_core_models.py
tests/markdowndeck/unit/overflow/: test_element_splitter.py  test_fill_context_overflow.py  test_overflow.py  test_overflow_bugs.py  test_overflow_bugs_2.py  test_overflow_detector.py  test_overflow_handlers.py  test_overflow_scenarios.py  test_overflow_slide_builder.py
tests/markdowndeck/unit/parser/: test_content_normalizer.py  test_parser.py  test_parser_bugs.py  test_parser_bugs_2.py  test_parser_bugs_3.py  test_parser_bugs_4.py  test_parser_bugs_inline_formatting.py  test_parser_content_loss.py  test_parser_content_loss_2.py  test_parser_content_preservation.py  test_parser_diagnostics.py  test_parser_directive_scoping.py  test_parser_edge_cases.py  test_parser_fenced_blocks.py  test_parser_metadata.py  test_slide_extractor.py  test_slide_extractor_bugs.py
tests/weaviate-mcp/: conftest.py
tests/weaviate-mcp/integration/: test_collection_edge_cases.py  test_ingestion_integration.py  test_mcp_tools_integration.py
tests/weaviate-mcp/unit/services/: test_ingestion_service.py  test_weaviate_service.py
tests/weaviate-mcp/unit/tools/: test_batch_check_existing_files.py  test_collection_tools.py  test_ingestion_tools.py
(+190 files in other folders)
